# VideosSampleCode

./: LICENSE  README.md  and_or_do_not_return_bool.py  cache_decorator.py  comma_equals_operator.py  dictionary_union.py  exponentiation_efficient.py  fastest_way_to_loop.py  flatten_list.py  float_representation.py  fstring_tricks.py  how_fast_is_sort.py  how_to_check_if_optional_argument_was_passed.py  json_example.py  largest_files.py  linked_list_cycles.py  longest_increasing_subsequence.py  match_qa.py  match_statement.py  match_statement_the_old_way.py  needs_profiling.py  plusequals_wat.py  prize_until_stop.py  random_sample_stream.py  relaxed_restrictions_on_decorators.py  remove_unicode_from_csv.py  removeprefix_removesuffix.py  restrict_keyword.c  sieve_eratosthenes.py  top15USWebsites.txt  trapping_rain_water.py  turing_machine.py  turing_machine_double_ones.py  words.txt
if_name_main_pkg/: bad_script.py  good_script.py  hello.cpp  hello.java  import_func.py  import_star.py  multiprocessing_bad_script.py  pickle_write.py
leetcode/: first_missing_positive.py  merge-k-sorted-lists.cpp  skyline-problem.cpp
videos/002_goodbye_list_type_hinting_standard_collections_new_in_python_39/: type_hinting_generics.py
videos/004_empty_truth_in_python/: empty_truth.py
videos/076_new_vs_init_in_python/: otp_hello.txt  (+2 more)
videos/081_cache_and_branch_prediction/src/: BranchPrediction.cpp  CMakeLists.txt  CacheAccessPattern.cpp  SmallSortingComparison.cpp  VectorFindIndex.cpp  branch_prediction.json  cache_access_pattern.json  common.h  plots.py  small_sorting_comparison.json
(+229 files in other folders)
